<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/conference_item_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/conference_item_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/conference_item_count"
                android:layout_width="60dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="1"
                android:textColor="@color/primary_text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/conference_item_title"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@string/conference"
                android:textColor="@color/primary_text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/conference_item_count"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/conference_item_add_call"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:drawableTop="@drawable/baseline_add_24"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/add_call"
                android:textColor="@color/primary_text_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/conference_item_title"
                app:layout_constraintTop_toTopOf="parent"

                />
            <TextView
                android:id="@+id/conference_item_remove"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:drawableTop="@drawable/baseline_close_24"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/remove"
                android:textColor="@color/primary_text_color"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/conference_item_add_call"
                app:layout_constraintTop_toTopOf="parent"

                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/conference_item_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>